changed page title

--- a/e2e/tests/reporter/Report.html
+++ b/e2e/tests/reporter/Report.html
@@ -11,7 +11,7 @@
   <script src="./resources/angular.min.js"></script>
 
   <title>EXUI Web Accesibility Test Report</title>
-  <meta name="description" content="">
+  <meta name="title" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./resources/css/all.css">
   <style>
