--- a/e2e/reporters/accessibility-reporter/Report.html
+++ b/e2e/reporters/accessibility-reporter/Report.html
@@ -8,12 +8,12 @@
   <!-- <meta http-equiv="Content-Security-Policy"
       content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'
        https://cdnjs.cloudflare.com https://ajax.googleapis.com http://www.google.com"> -->
-  <script src="./resources/angular.min.js"></script>
+  <script src="./node_modules/angular/angular.min.js"></script>
 
   <title>EXUI Web Accesibility Test Report</title>
   <meta name="title" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./resources/css/all.css">
+  <link rel="stylesheet" href="resources/css/all.css">
   <style>
     pre {
       white-space: pre-wrap;       /* css-3 */
