--- a/e2e/reporters/accessibility-reporter/Report.html
+++ b/e2e/reporters/accessibility-reporter/Report.html
@@ -8,7 +8,7 @@
   <!-- <meta http-equiv="Content-Security-Policy"
       content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'
        https://cdnjs.cloudflare.com https://ajax.googleapis.com http://www.google.com"> -->
-  <script src="./node_modules/angular/angular.min.js"></script>
+  <script src="resources/angular.min.js"></script>
 
   <title>EXUI Web Accesibility Test Report</title>
   <meta name="title" content="">
